--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
         <div id="site-banner">
             <div id="banner-overlay">
                 <div id="banner-content">
-                    <span id="banner-text">
+                    <div id="banner-text">
                         Sed ut perspiciatis unde omnis <br>
                         iste natus error sit
-                    </span>
-                    <br>
-                    <span id="banner-subtext">
+                    </div>
+                    <div id="banner-subtext">
                         Nemo enim ipsam voluptatem <br>
                         quia voluptas sit
-                    </span>
-                    <br>
-                    <a href="#">
-                        <button id="content-button">
-                            Voluptatibus
-                        </button>
-                    </a>
+                    </div>
+                    <div>
+                        <a href="#">
+                            <button id="content-button">
+                                Voluptatibus
+                            </button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
