update to tibon master

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav id="nav">
         <div>
         <ul>
-           <section><li><img class="logo" src="assets/images/nostrum.png" alt="nostrum logo" > </li>
+           <section class="section"><li><img class="logo" src="assets/images/nostrum.png" alt="nostrum logo" > </li>
 
             <li><a class="active" href="#home">Lorem</a></li>
             <li><a href="#Ipsum">Ipsum</a></li>
@@ -63,6 +63,30 @@
         <a href="##"><li><section class="images"><img src="assets/images/message.png"></section><section class="text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit</section> </li></a>
     </section>
 </div>
+
+<div id="feature-phone">
+    <div id="feature-phone-image">
+        <img src="assets/images/iphone7.png" height="212px">
+    </div>
+    <div id="feature-text">
+        <div id="feature-phone-text">
+            At vero eos et accusamus et iusto odio
+        </div>
+        <div id="feature-phone-subtext">
+            Nam libero tempore, cum soluta nobis est eligendi optio
+            <br>
+            nihil impedit quo minus id quod maxime placeat facere.
+        </div>
+        <div id="feature-button">
+            <a href="#">
+                <button>
+                    Vel illum qui
+                </button>
+            </a>
+        </div>
+    </div>
+</div>
+</body>
 
 
 
