roden's buttons and the div which has attribute clear:both

--- a/index.html
+++ b/index.html
@@ -61,19 +61,25 @@
                 <a href="##"><li><section class="images"><img src="assets/images/message.png"></section><section class="text">Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit</section> </li></a>
             </section>
         </div>
+
         <div id="feature-phone">
+
             <div id="feature-phone-image">
                 <img src="assets/images/iphone7.png" height="212px">
             </div>
+
             <div id="feature-text">
+
                 <div id="feature-phone-text">
                     At vero eos et accusamus et iusto odio
                 </div>
+
                 <div id="feature-phone-subtext">
                     Nam libero tempore, cum soluta nobis est eligendi optio
                     <br>
                     nihil impedit quo minus id quod maxime placeat facere.
                 </div>
+
                 <div id="feature-button">
                     <a href="#">
                         <button>
@@ -81,7 +87,14 @@
                         </button>
                     </a>
                 </div>
+
+
+
             </div>
+
+            <div id="clearBoth"></div>
+
         </div>
+
     </body>
 </html>
