Final One . with FORMS

--- a/index.html
+++ b/index.html
@@ -133,13 +133,11 @@
                 <div id="tab-one">Inste natus</div>
                 <div id="tab-two">Qui ratione</div>
                 <div id="form-input">
-                    <div id="input-field-one">
-                        &nbsp Adipiscing
-                    </div>
-                    <div id="input-field-two">
-                        &nbsp Ex ea commodi
-                    </div>
-                    <div id="submit">Vel illum qui</div>
+                    <form>
+                    <input id="input-field-one" type="text" placeholder="Adipiscing">
+                    <input id="input-field-two" type="text" placeholder="Ex ea commodi">
+                    <input id="submit" type="submit" value="Vel illum qui">
+                    </form>
                 </div>
             </article>
         </section>
