--- a/index.html
+++ b/index.html
@@ -132,16 +132,43 @@
             <article>
                 <div id="tab-one">Inste natus</div>
                 <div id="tab-two">Qui ratione</div>
-                <div id="form-input">
+                <div id="form-input-one">
                     <form>
-                    <input id="input-field-one" type="text" placeholder="Adipiscing">
-                    <input id="input-field-two" type="text" placeholder="Ex ea commodi">
+                    <input id="input-field-one" type="text" placeholder="Name">
+                    <input id="input-field-two" type="email" placeholder="Email">
+                    <input id="input-field-three" type="tel" placeholder="Telephone ">
+                    <span id="ageConfirm">
+                        <label>
+                            <input type="checkbox" id="ageConfirmed">
+                            <img src="assets/images/check_mark.png">
+                            I am 18 years old
+                        </label>
+                        <label for="ageConfirmed">
+                            <span id="checkBox"></span>
+                        </label>
+                    </span>
                     <input id="submit" type="submit" value="Vel illum qui">
                     </form>
                 </div>
+                <div id="form-input-two">
+                    <form>
+                        <input id="input-field-one" type="text" placeholder="Name">
+                        <input id="input-field-two" type="email" placeholder="Email">
+                        <input id="input-field-three" type="tel" placeholder="Telephone ">
+                        <span id="ageConfirm">
+                            <label for="ageConfirmed">
+                                <input type="checkbox" id="ageConfirmed">
+                                I am 18 years old
+                            </label>
+                        </span>
+                        <input id="submit" type="submit" value="Vel illum qui">
+                    </form>
+                </div>
             </article>
+
         </section>
     </div>
     <div class="clear-both"></div>
+
     </body>
 </html>
